FA: stop trying to load new Pro|Thin asset

--- a/config-yml/fontawesome.settings.yml
+++ b/config-yml/fontawesome.settings.yml
@@ -13,5 +13,6 @@ use_regular_file: false
 use_light_file: false
 use_brands_file: true
 use_duotone_file: false
+use_thin_file: false
 external_svg_integrity: ''
 bypass_validation: false
