--- a/config-yml/core.entity_view_display.node.publication.featured.yml
+++ b/config-yml/core.entity_view_display.node.publication.featured.yml
@@ -164,6 +164,8 @@ content:
     settings:
       image_link: content
       image_style: sample_publication_image
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
