--- a/config-yml/core.entity_view_display.node.publication.featured.yml
+++ b/config-yml/core.entity_view_display.node.publication.featured.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_description_extended
     - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
     - field.field.node.publication.field_featured
@@ -172,6 +173,7 @@ content:
 hidden:
   field_additional_indexed_text: true
   field_credit: true
+  field_description_extended: true
   field_editor: true
   field_family: true
   field_featured: true
