--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_description_extended
     - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
     - field.field.node.publication.field_featured
@@ -64,6 +65,7 @@ hidden:
   field_city_town: true
   field_credit: true
   field_description: true
+  field_description_extended: true
   field_editor: true
   field_family: true
   field_featured: true
