--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -57,7 +57,6 @@ dependencies:
     - file
     - image
     - options
-    - text
     - user
 third_party_settings:
   field_group:
@@ -89,13 +88,6 @@ content:
     third_party_settings: {  }
     weight: 15
     region: content
-  field_description_extended:
-    type: text_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 16
-    region: content
   field_editor:
     type: entity_reference_label
     label: above
@@ -110,7 +102,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 18
+    weight: 17
     region: content
   field_first_issue_approx_date:
     type: string
@@ -135,7 +127,7 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 22
+    weight: 21
     region: content
   field_first_issue_search_date:
     type: datetime_default
@@ -144,7 +136,7 @@ content:
       timezone_override: ''
       format_type: medium
     third_party_settings: {  }
-    weight: 31
+    weight: 30
     region: content
   field_frequency:
     type: string
@@ -178,7 +170,7 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    weight: 20
+    weight: 19
     region: content
   field_issn:
     type: string
@@ -211,7 +203,7 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 21
+    weight: 20
     region: content
   field_last_issue_search_date:
     type: datetime_default
@@ -220,14 +212,14 @@ content:
       timezone_override: ''
       format_type: medium
     third_party_settings: {  }
-    weight: 32
+    weight: 31
     region: content
   field_marc_frequency:
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 33
+    weight: 32
     region: content
   field_microfilmed_by:
     type: entity_reference_label
@@ -251,7 +243,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 34
+    weight: 33
     region: content
   field_place_of_publication:
     type: address_default
@@ -266,7 +258,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 30
+    weight: 29
     region: content
   field_publisher:
     type: entity_reference_label
@@ -285,7 +277,7 @@ content:
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: 29
+    weight: 28
     region: content
   field_serial_relation_pre_ref_dn:
     type: entity_reference_label
@@ -293,7 +285,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 26
+    weight: 25
     region: content
   field_serial_relation_pre_ref_up:
     type: entity_reference_label
@@ -301,7 +293,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 25
+    weight: 24
     region: content
   field_serial_relation_suc_ref_dn:
     type: entity_reference_label
@@ -309,7 +301,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 28
+    weight: 27
     region: content
   field_serial_relation_suc_ref_up:
     type: entity_reference_label
@@ -317,21 +309,21 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 27
+    weight: 26
     region: content
   field_serial_relationship_op_pre:
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 23
+    weight: 22
     region: content
   field_serial_relationship_op_suc:
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 24
+    weight: 23
     region: content
   field_subject_notes:
     type: basic_string
@@ -372,7 +364,7 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    weight: 19
+    weight: 18
     region: content
   field_title_notes:
     type: basic_string
@@ -384,11 +376,12 @@ content:
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 17
+    weight: 16
     region: content
 hidden:
   field_additional_indexed_text: true
   field_credit: true
+  field_description_extended: true
   field_featured: true
   field_first_issue_sort_date: true
   field_language: true
