--- a/config-yml/core.entity_view_display.node.publication.featured.yml
+++ b/config-yml/core.entity_view_display.node.publication.featured.yml
@@ -7,7 +7,8 @@ dependencies:
     - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
-    - field.field.node.publication.field_description_extended
+    - field.field.node.publication.field_description_file
+    - field.field.node.publication.field_description_html
     - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
     - field.field.node.publication.field_featured
@@ -56,6 +57,7 @@ dependencies:
     - field_group
     - image
     - options
+    - text
     - user
 third_party_settings:
   field_group:
@@ -80,6 +82,20 @@ targetEntityType: node
 bundle: publication
 mode: featured
 content:
+  field_description:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 8
+    region: content
+  field_description_html:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 7
+    region: content
   field_first_issue_approx_date:
     type: string
     label: above
@@ -166,8 +182,7 @@ content:
 hidden:
   field_additional_indexed_text: true
   field_credit: true
-  field_description: true
-  field_description_extended: true
+  field_description_file: true
   field_editor: true
   field_family: true
   field_featured: true
