--- a/config-yml/facets.facet.country.yml
+++ b/config-yml/facets.facet.country.yml
@@ -11,6 +11,8 @@ id: country
 name: Country
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: country
 facet_source_id: 'search_api:views_page__search__search_page'
 field_identifier: country_name_facet
