--- a/config-yml/facets.facet.holdings.yml
+++ b/config-yml/facets.facet.holdings.yml
@@ -11,6 +11,8 @@ id: holdings
 name: Holdings
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: holdings
 facet_source_id: 'search_api:views_page__search__search_page'
 field_identifier: holdings
