--- a/config-yml/facets.facet.language.yml
+++ b/config-yml/facets.facet.language.yml
@@ -11,6 +11,8 @@ id: language
 name: Language
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: language
 facet_source_id: 'search_api:views_page__search__search_page'
 field_identifier: field_language_facet
