--- a/config-yml/facets.facet.province_state.yml
+++ b/config-yml/facets.facet.province_state.yml
@@ -11,6 +11,8 @@ id: province_state
 name: Province/State
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: province_state
 facet_source_id: 'search_api:views_page__search__search_page'
 field_identifier: administrative_area_name_facet
