--- a/config-yml/facets.facet.publication_title.yml
+++ b/config-yml/facets.facet.publication_title.yml
@@ -11,6 +11,8 @@ id: publication_title
 name: 'Publication Title'
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: publication_title
 facet_source_id: 'search_api:views_page__digital_page_lister__page_search'
 field_identifier: parent_publication_title
