--- a/config-yml/facets.facet.publication_year.yml
+++ b/config-yml/facets.facet.publication_year.yml
@@ -11,6 +11,8 @@ id: publication_year
 name: 'Publication Date'
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: publication_year
 facet_source_id: 'search_api:views_page__digital_page_lister__page_search'
 field_identifier: parent_issue_year
