--- a/config-yml/facets.facet.publication_year_issue.yml
+++ b/config-yml/facets.facet.publication_year_issue.yml
@@ -11,6 +11,8 @@ id: publication_year_issue
 name: 'Publication Year'
 weight: 0
 min_count: 1
+missing: false
+missing_label: others
 url_alias: publication_year_issue
 facet_source_id: 'search_api:views_page__digital_page_lister__page_issues'
 field_identifier: parent_issue_year
