--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -52,6 +52,7 @@ dependencies:
     - node.type.publication
   module:
     - address
+    - allowed_formats
     - conditional_fields
     - datetime_range
     - field_group
@@ -173,7 +174,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_editor:
     type: entity_reference_autocomplete
     weight: 11
