Post-core upgrade config updates re: text formats

--- a/config-yml/editor.editor.description_html.yml
+++ b/config-yml/editor.editor.description_html.yml
@@ -32,11 +32,7 @@ settings:
           items:
             - Source
             - Maximize
-  plugins:
-    language:
-      language_list: un
-    stylescombo:
-      styles: ''
+  plugins: {  }
 image_upload:
   status: false
   scheme: public
