--- a/config-yml/editor.editor.basic_html.yml
+++ b/config-yml/editor.editor.basic_html.yml
@@ -37,11 +37,7 @@ settings:
           name: Tools
           items:
             - Source
-  plugins:
-    language:
-      language_list: un
-    stylescombo:
-      styles: ''
+  plugins: {  }
 image_upload:
   status: true
   scheme: public
