--- a/config-yml/views.view.print_title_listing.yml
+++ b/config-yml/views.view.print_title_listing.yml
@@ -792,7 +792,48 @@ display:
           entity_field: name
           plugin_id: string
           operator: contains
-          value: 'UNB Libraries, Fredericton'
+          value: 'UNB Libraries'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+        name_1:
+          id: name_1
+          table: taxonomy_term_field_data
+          field: name
+          relationship: holding_institution
+          group_type: group
+          admin_label: ''
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: string
+          operator: contains
+          value: Fredericton
           group: 1
           exposed: false
           expose:
