--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -92,6 +92,8 @@ module:
   views_data_export: 0
   views_infinite_scroll: 0
   views_ui: 0
+  webform: 0
+  webform_ui: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
