NBNP-379 Restore webform path alias attempt

--- a/config-yml/webform.webform.report_additional_info_errs.yml
+++ b/config-yml/webform.webform.report_additional_info_errs.yml
@@ -66,8 +66,8 @@ settings:
   ajax_effect: ''
   ajax_speed: null
   page: true
-  page_submit_path: ''
-  page_confirm_path: ''
+  page_submit_path: /report-info-errors
+  page_confirm_path: /report-info-errors
   page_theme_name: ''
   form_title: source_entity_webform
   form_submit_once: false
